<resources>
    <string name="app_name">StudyPlanner_200050013_200050130</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="taskTypes">
        <item>Study Plan</item>
        <item>Assignments</item>
        <item>Exams</item>
        <item>Lectures</item>
    </string-array>
    <string name="Sunday">SUN</string>
    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THU</string>
    <string name="Friday">FRI</string>
    <string name="Saturday">SAT</string>
    <string name="Previous">Prev</string>
    <string name="Next">Next</string>
    <string name="_0">0 </string>
    <string name="assignment">Assignments</string>
    <string name="study_plans">Study Plan</string>
    <string name="date">Select a Date</string>
    <string name="exams">Exams</string>
    <string name="lectures">Lectures</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>


</resources>
